# kailua

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  README.md  design.html  devnet.yaml  dispute.html  game.html  index.html  justfile  operate.html  pandaops-op.yaml  parameters.html  print.html  project.html  proposer.html  quickstart.html  searchindex.js  setup.html  toc.html  toc.js  treasury.html  upgrade.html  validator.html  verifier.html
.github/workflows/: ci.yml  gh-pages.yml
book/: README.md  book.toml
book/src/: SUMMARY.md  design.md  dispute.md  game.md  introduction.md  operate.md  parameters.md  project.md  proposer.md  quickstart.md  setup.md  treasury.md  upgrade.md  validator.md  verifier.md
contracts/: foundry.toml
contracts/src/: FaultProofGame.sol
contracts/test/: FaultProofGame.t.sol  MockVerifier.sol
crates/common/: Cargo.toml
crates/common/src/: blobs.rs  boot.rs  client.rs  config.rs  driver.rs  executor.rs  journal.rs  kona.rs  kzg.rs  lib.rs  oracle.rs  precondition.rs  proof.rs  provider.rs  rkyv.rs  stitching.rs  witness.rs
crates/common/src/client/: core.rs  mod.rs  stateless.rs  stitching.rs
crates/common/src/kona/: chain.rs  mod.rs  pipeline.rs  sync.rs
crates/common/src/oracle/: map.rs  mod.rs  vec.rs
crates/common/src/precompiles/: bn128_pair.rs  ecrecover.rs  kzg_point_eval.rs  mod.rs
crates/common/src/rkyv/: execution.rs  kzg.rs  mod.rs  optimism.rs  primitives.rs  vec.rs
crates/common/testdata/: IDENTITY  MANIFEST-000052  OPTIONS-000050
crates/contracts/: Cargo.toml  build.rs
crates/contracts/foundry/: .dockerignore  Dockerfile  foundry.toml  justfile
crates/contracts/foundry/scripts/: Deploy.s.sol
crates/contracts/foundry/src/: FaultAttributionGame.sol  FaultAttributionManager.sol  FaultClaimGame.sol  FaultLib.sol  FaultProofGame.sol  FaultProofGameCheats.sol  FaultProofGameLib.sol  FaultProofGameManager.sol  FaultProofSetup.sol  KailuaGame.sol  KailuaLib.sol  KailuaSetup.sol  KailuaTournament.sol  KailuaTreasury.sol  ProofLib.sol
crates/contracts/foundry/test/: BlobDispute.t.sol  Bond.t.sol  ClaimDispute.t.sol  Costs.t.sol  Deploy.t.sol  Dispute.t.sol  FaultProofGame.t.sol  KZG.t.sol  KailuaTest.sol  KailuaTest.t.sol  MockVerifier.sol  Propose.t.sol
crates/contracts/src/: lib.rs
crates/proposer/: Cargo.toml
crates/proposer/src/: args.rs  fetch.rs  lib.rs  propose.rs  resolve.rs
crates/prover/: Cargo.toml
crates/prover/src/: args.rs  channel.rs  config.rs  kv.rs  lib.rs  preflight.rs  proof.rs  prove.rs  tasks.rs
crates/prover/src/backends/: bonsai.rs  boundless.rs  mod.rs  zkvm.rs
crates/prover/src/client/: mod.rs  native.rs  proving.rs  witgen.rs
crates/sync/: Cargo.toml
crates/sync/src/: agent.rs  args.rs  blobs.rs  cursor.rs  deployment.rs  fault.rs  lib.rs  proposal.rs  retry.rs  stall.rs  telemetry.rs
crates/sync/src/provider/: beacon.rs  mod.rs  optimism.rs
crates/sync/src/transact/: fillers.rs  mod.rs  provider.rs  rpc.rs  safe.rs  signer.rs
crates/validator/: Cargo.toml
crates/validator/src/: args.rs  channel.rs  lib.rs  proposals.rs  requests.rs  tasks.rs  validate.rs
testdata/: .gitignore
testdata/16491249/: 000051.sst  000054.sst  000059.sst  IDENTITY  LOG  MANIFEST-000066  MANIFEST-000082  MANIFEST-000210
