[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81"
authors = ["hashcashier"]
homepage = "https://risc0.github.io/kailua/"
repository = "https://github.com/risc0/kailua"
keywords = ["zkvm", "ethereum", "optimism", "fault", "proof"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace]
resolver = "2"
members = [
    "bin/*",
    "build/*",
    "crates/*",
]

[workspace.dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
async-trait = "0.1.81"
aws-config = "1.5.15"
aws-sdk-kms = "1.58.0"
bincode = "1.3.3"
bytemuck = "1.12"
bytes = "1.7.2"
clap = { version = "4.5.21", features = ["derive", "env"] }
c-kzg = "=1.0.3"
foundry-compilers = "0.11.0"
gcloud-sdk = { version = "0.26.3", features = ["google-cloud-kms-v1"] }
hashbrown = { version = "0.15.0", features = ["rayon"] }
hex = "0.4.3"
lazy_static = "1.5.0"
lru = "0.12.4"
paste = "1.0.15"
pot = "3.0.1"
reqwest = "0.12.12"
revm = { version = "19.5.0", default-features = false }
rkyv = { version = "0.8.9", features = ["hashbrown-0_15", "std"] }
rocksdb = "0.22.0"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
spin = { version = "0.9.8", features = ["mutex"] }
tempfile = "3.10.1"
thiserror = "2.0.11"
tokio = { version = "1.39.1", features = ["full"] }
tokio-retry = "0.3.0"
url = "2.5.4"

# Telemetry
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry-prometheus = "0.27.0"
opentelemetry-zipkin = "0.27.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Alloy
alloy = { version = "0.11.1", default-features = false, features = ["json"] }
alloy-chains = "0.1.46"
alloy-consensus = { version = "0.11.1", default-features = false, features = ["serde"] }
alloy-eips = { version = "0.11.1", default-features = false, features = ["kzg"] }
alloy-rlp = "0.3.11"
alloy-primitives = { version = "0.8.21", default-features = false, features = ["map-hashbrown"] }
alloy-rpc-types-beacon = "0.11.1"
alloy-rpc-types-engine = { version = "0.11.1", default-features = false }
alloy-sol-types = { version = "0.8.20", features = ["json"] }

# OP Alloy
op-alloy-consensus = { version = "=0.10.5", default-features = false, features = ["serde"] }
op-alloy-flz = { version = "=0.10.5", default-features = false }
op-alloy-rpc-types-engine = { version = "=0.10.5", default-features = false, features = ["serde"] }

# Kailua
kailua-build = { path = "build/risczero" }
kailua-client = { path = "bin/client" }
kailua-common = { path = "crates/common" }
kailua-contracts = { path = "crates/contracts" }
kailua-host = { path = "bin/host" }

# Kona
kona-client = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548", default-features = false, features = ["serde"] }
kona-driver = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-executor = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-genesis = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-host = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548", default-features = false, features = ["single"] }
kona-mpt = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548", features = ["serde"] }
kona-rpc = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-preimage = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548", features = ["serde", "rkyv", "std"] }
kona-proof = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-protocol = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-registry = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }
kona-std-fpvm = { git = "https://github.com/op-rs/kona", rev = "d02f6e05149716f48586136882bb413846462548" }

# Boundless
bonsai-sdk = { version = "1.2.1", features = ["non_blocking"] }
boundless-market = "0.6.0"

# RISC Zero
risc0-aggregation = "0.2.2"
risc0-build = { version = "1.2.4", features = ["unstable"] }
risc0-ethereum-contracts = { version = "1.3.2", features = ["unstable"] }
risc0-groth16 = { version = "1.2.4", default-features = false }
risc0-zkvm = { version = "1.2.4", features = ["heap-embedded-alloc", "unstable"] }
risc0-zkvm-platform = { version = "1.2.4", features = ["heap-embedded-alloc"] }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"

[profile.release.build-override]
codegen-units = 1
opt-level = 3
