[package]
name = "kailua-common"
version = "0.3.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytemuck.workspace = true
c-kzg.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
lru.workspace = true
pot.workspace = true
rkyv.workspace = true
spin.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true

op-alloy-consensus.workspace = true
op-alloy-flz.workspace = true
op-alloy-rpc-types-engine.workspace = true

kona-driver.workspace = true
kona-derive.workspace = true
kona-executor.workspace = true
kona-genesis.workspace = true
kona-mpt.workspace = true
kona-rpc.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true

risc0-aggregation.workspace = true
risc0-groth16.workspace = true
risc0-zkvm.workspace = true
risc0-zkvm-platform.workspace = true

serde.workspace = true
tracing.workspace = true
