[package]
name = "kailua-common"
version = "0.3.8"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytemuck.workspace = true
c-kzg.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
lru.workspace = true
pot.workspace = true
rkyv.workspace = true
spin.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-rlp.workspace = true
alloy-op-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true

op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

kona-driver.workspace = true
kona-derive.workspace = true
kona-executor.workspace = true
kona-genesis.workspace = true
kona-mpt.workspace = true
kona-rpc.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true

risc0-zkvm.workspace = true

serde.workspace = true
tracing.workspace = true
