[package]
name = "kailua-common"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86"
authors = ["hashcashier"]
homepage = "https://risc0.github.io/kailua/"
repository = "https://github.com/risc0/kailua"
keywords = ["zkvm", "ethereum", "optimism", "fault", "proof"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
c-kzg.workspace = true
lazy_static.workspace = true
pot.workspace = true
rkyv.workspace = true
spin.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-rlp.workspace = true
alloy-op-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-trie.workspace = true

op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

kona-driver.workspace = true
kona-derive.workspace = true
kona-executor.workspace = true
kona-genesis.workspace = true
kona-mpt.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true

risc0-zkvm.workspace = true

serde.workspace = true
tracing.workspace = true

[dev-dependencies]
copy_dir.workspace = true
kona-cli.workspace = true
kona-host.workspace = true
rayon.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
