[package]
name = "kailua-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, features = ["contract", "rlp", "json", "sol-types"]}
alloy-sol-types.workspace = true

[build-dependencies]
foundry-compilers.workspace = true
