[package]
name = "kailua-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, features = ["contract", "rlp", "json", "sol-types"]}

[build-dependencies]
foundry-compilers.workspace = true
