[package]
name = "kailua-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
bytemuck.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tracing.workspace = true

alloy = { workspace = true, features = ["full", "kzg", "signer-aws", "signer-gcp"] }

kailua-build.workspace = true
kailua-common.workspace = true
kailua-contracts.workspace = true
kailua-prover.workspace = true
kailua-sync.workspace = true

kona-protocol.workspace = true
kona-host.workspace = true

opentelemetry.workspace = true

risc0-zkvm.workspace = true

[features]
devnet = [
    "kailua-prover/devnet",
    "kailua-sync/devnet"
]
prove = [
    "kailua-prover/prove",
    "risc0-zkvm/prove"
]
cuda = [
    "kailua-prover/cuda",
    "risc0-zkvm/cuda"
]
metal = [
    "kailua-prover/metal",
    "risc0-zkvm/metal"
]
disable-dev-mode = [
    "kailua-build/disable-dev-mode",
    "kailua-prover/disable-dev-mode",
    "risc0-zkvm/disable-dev-mode"
]
rebuild-fpvm = [
    "kailua-build/rebuild-fpvm",
    "kailua-prover/rebuild-fpvm",
    "kailua-sync/rebuild-fpvm"
]
